--- a/robust.tex
+++ b/robust.tex
@@ -1,9 +1,9 @@
 \subsection{Impact of Cross Traffic}
 \label{s:robust:cross}
 
-\input{big_exp}
+\input{big_exp_text}
 Can \name successfully revert to status-quo performance in the presence of buffer-filling cross traffic, then resume providing benefits once that cross traffic leaves?
-In Figure~\ref{fig:eval:big_exp}, we \an{show something}.
+In Figure~\ref{fig:eval:bigexp}, we \an{show something}.
 
 In studying the impact of cross traffic, we present results with both Nimbus and Copa being used as the congestion control algorithm at the \inbox.
 
