update impl diagram

--- a/impl.tex
+++ b/impl.tex
@@ -2,6 +2,7 @@
 \begin{figure*}[t]
     \centering
     \includegraphics[width=2\columnwidth]{img/bundler-diagram}
+    \vspace{-10pt}
     \caption{\name Implementation Overview. Box shading corresponds to the roles described in Figure~\ref{fig:design:block-diag}.}\label{fig:bundler}
 \end{figure*}
 
