--- a/packages.tex
+++ b/packages.tex
@@ -6,6 +6,10 @@
 % use only if we need more space!
 %\titlespacing*{\section}{0pt}{1*\baselineskip}{1*\baselineskip}
 %\titlespacing*{\subsection}{0pt}{0.8*\baselineskip}{0.6*\baselineskip}
+% break glass in case of emergency
+%\titlespacing*{\section}{0pt}{0pt}{0pt}
+%\titlespacing*{\subsection}{0pt}{0pt}{0pt}
+%\titlespacing*{\subsubsection}{0pt}{0pt}{0pt}
 
 \usepackage{amsmath}
 \usepackage[subtle]{savetrees}
