--- a/realworld.tex
+++ b/realworld.tex
@@ -7,7 +7,7 @@
 \end{knitrout}
 \newcommand{\realworldMedianLatencyImprovement}{57\%\xspace}
 \newcommand{\realworldAvgBwRatio}{1\%\xspace}
-\caption{On 5 real-Internet paths, \name achieves close to the Base RTT for latency-sensitive traffic. Each bar depicts an individual 5-tuple. Load-balancing in the Internet prevents queueing for some 5-tuples. \name still offers scheduling for paths with queueing (achieving \realworldMedianLatencyImprovement lower latencies overall) while achieving overall throughput within \realworldAvgBwRatio of that in the Status Quo scenario.}
+\caption{On 5 real-Internet paths, \name achieves lower latencies than Status Quo for latency-sensitive traffic. Each bar depicts an individual 5-tuple; load-balancing in the Internet prevents queueing for some 5-tuples. \name still offers scheduling for paths with queueing (achieving \realworldMedianLatencyImprovement lower latencies overall) while achieving overall throughput within \realworldAvgBwRatio of that in the Status Quo scenario.}
     \label{fig:eval:realworld}
 \end{figure}
 
