--- a/graphs/lowdelays.Rnw
+++ b/graphs/lowdelays.Rnw
@@ -36,6 +36,8 @@ delaysImprovement = 100 * (1 - (delaysBundler[1] / delaysBaseline[1]))
 %    \caption{We configure \name with the fq-codel scheduling policy to achieve low end-to-end queueing delays. \name's packet delay is \Sexpr{round(delaysImprovement, 0)}\% lower in the median.}
 %\end{figure}
 \newcommand{\delaysImprovement}{\Sexpr{round(delaysImprovement, 0)}\%\xspace}
+
+\begin{table}[h]
 \begin{center}
 \begin{tabular}{c|c|c}
 Scheme     &  Median RTT                          &    $99$\%ile  RTT                      \\
@@ -45,4 +47,5 @@ Bundler    &  \Sexpr{round(delaysBundler[1],2)}   &    \Sexpr{round(delaysBundle
     \label{fig:eval:lowdelays}
 \end{tabular}
 \end{center}
-
+    \caption{Using CoDel at \name reduces end-to-end packet delays.}\label{t:eval:codel}
+\end{table}
