--- a/graphs/strict-prio.Rnw
+++ b/graphs/strict-prio.Rnw
@@ -37,16 +37,19 @@ strictprio_copa_sfq <- quantile(strictprio_copa_sfq$Slowdown, c(0.5, 0.99))
 strictprio_nobundler <- quantile(strictprio_nobundler$Slowdown, c(0.5, 0.99))
 
 @
+\begin{table}[h]
 \begin{center}
 \begin{tabular}{c|c|c}
 Scheme     &  Median Slowdown                           &  $99$\%ile Slowdown                        \\
 \hline
 Bundler (Prio.)   &  \Sexpr{round(strictprio_copa_prio[1],2)} &  \Sexpr{round(strictprio_copa_prio[2],2)}  \\
-Bundler (SFQ)     &  \Sexpr{round(strictprio_copa_sfq[1],2)}  &  \Sexpr{round(strictprio_copa_sfq[2],2)}  \\
+Bundler (SFQ)     &  \overviewBenefitsBundlerMedian  &  \overviewBenefitsBundlerTail  \\
 \baseline  &  \Sexpr{round(strictprio_nobundler[1],2)}  &  \Sexpr{round(strictprio_nobundler[2],2)}
     \label{fig:eval:strict-prio}
 \end{tabular}
 \end{center}
+\caption{Using strict prioritization further reduces FCTs for the higher-priority class of traffic.}\label{t:eval:prio}
+\end{table}
 \newcommand{\strictPrioTailImprovementOverFq}{\Sexpr{round((1-(strictprio_copa_prio[2] / strictprio_copa_sfq[2]))*100, 0)}\%\xspace}
 \newcommand{\strictPrioImprovement}{\Sexpr{round((1-(strictprio_copa_prio[1] / strictprio_nobundler[1]))*100, 0)}\%\xspace}
 
