update e2e exp fig

--- a/e2e.tex
+++ b/e2e.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:e2e-1} 
 
 \end{knitrout}
-    \caption{\name still provides benefits when the endhosts use different congestion control algorithms. \fc{Come back and double check this if time, bbr seems to be doing too well.}}
-    \label{fig:eval:e2e}
+    \caption{\name still provides benefits when the endhosts use different congestion control algorithms.}
+    \label{fig:eval:traffic}
 \end{figure}
